# core

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenTimelineIO.cmake
include/olive/core/: core.h
include/olive/core/render/: audioparams.h  pixelformat.h  samplebuffer.h  sampleformat.h
include/olive/core/util/: bezier.h  color.h  cpuoptimize.h  log.h  math.h  stringutils.h  tests.h  timerange.h  value.h
src/: core.h
src/render/: audioparams.cpp  samplebuffer.cpp
src/util/: bezier.cpp  color.cpp  color.h  pixelformat.h  rational.cpp  rational.h  stringutils.cpp  stringutils.h  tests.cpp  tests.h  timecodefunctions.cpp  timecodefunctions.h  timerange.cpp  timerange.h  value.cpp  value.h
tests/: rational-test.cpp  stringutils-test.cpp  timecode-test.cpp  timerange-test.cpp
